module08/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpclient
  labels:
    app: httpclient
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpclient
  template:
    metadata:
      labels:
        app: httpclient
    spec:
      containers:
        - name: app
          image: zzzzzsy/cncamp04:2.0
          ports:
            - containerPort: 8080
              name: http-app
          resources:
            limits:
              memory: "200Mi"
              cpu: "100m"
            requests:
              memory: "100Mi"
              cpu: "50m"
          livenessProbe:
            httpGet:
              path: /ip
              port: 8080
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            failureThreshold: 3
            periodSeconds: 10
      imagePullSecrets:
        - name: dockerhub
