module08/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpclient-service
spec:
  selector:
    app: httpclient
  ports:
    - name: http-client
      port: 8080
      targetPort: http-app
