module08/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpclient-ing
  namespace: cncamp
  labels:
    name: httpclient-ing
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  rules:
    - host: cncamp.zzzzzsy.xyz
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: httpclient-service
                port:
                  number: 80
  tls:
    - hosts:
        - cncamp.zzzzzsy.xyz
      secretName: cncamp-tls
  ingressClassName: nginx
